--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title>A Window Into the Near-Future</title>
+        <title>CP2020: A Window Into the Near-Future</title>
 
         <link rel="stylesheet" href="normalize.css">
 		<link rel="stylesheet" href="styles.css">
@@ -11,13 +11,25 @@
             <h1>A Window Into the Near-Future:</h1>
             <h2><em>A Cyberpunk 2020 Scene</em></h2>
         </header>
+
         <main>
+            <div class="content">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis. Pulvinar mattis nunc sed blandit libero volutpat sed cras. Sollicitudin aliquam ultrices sagittis orci.Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Feugiat in fermentum posuere urna nec tincidunt praesent.Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Praesent elementum facilisis leo vel.Elit pellentesque habitant morbi tristique. Fermentum leo vel orci porta non pulvinar neque.Id aliquet risus feugiat in ante metus dictum. Netus et malesuada fames ac turpis egestas integer.Eget egestas purus viverra accumsan in nisl nisi scelerisque eu.Vulputate enim nulla aliquet porttitor lacus.Curabitur vitae nunc sed velit dignissim sodales ut eu.Non nisi est sit amet facilisis magna etiam tempor.Enim lobortis scelerisque fermentum dui faucibus in ornare quam.Senectus et netus et malesuada fames ac turpis egestas maecenas.</p>
-            </main>
+            </div>
+            <div class="content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis. Pulvinar mattis nunc sed blandit libero volutpat sed cras. Sollicitudin aliquam ultrices sagittis orci.Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Feugiat in fermentum posuere urna nec tincidunt praesent.Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Praesent elementum facilisis leo vel.Elit pellentesque habitant morbi tristique. Fermentum leo vel orci porta non pulvinar neque.Id aliquet risus feugiat in ante metus dictum. Netus et malesuada fames ac turpis egestas integer.Eget egestas purus viverra accumsan in nisl nisi scelerisque eu.Vulputate enim nulla aliquet porttitor lacus.Curabitur vitae nunc sed velit dignissim sodales ut eu.Non nisi est sit amet facilisis magna etiam tempor.Enim lobortis scelerisque fermentum dui faucibus in ornare quam.Senectus et netus et malesuada fames ac turpis egestas maecenas.</p>
+            </div>
+            <div class="content">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Facilisi etiam dignissim diam quis. Pulvinar mattis nunc sed blandit libero volutpat sed cras. Sollicitudin aliquam ultrices sagittis orci.Scelerisque mauris pellentesque pulvinar pellentesque habitant morbi. Feugiat in fermentum posuere urna nec tincidunt praesent.Ullamcorper morbi tincidunt ornare massa eget egestas purus viverra. Praesent elementum facilisis leo vel.Elit pellentesque habitant morbi tristique. Fermentum leo vel orci porta non pulvinar neque.Id aliquet risus feugiat in ante metus dictum. Netus et malesuada fames ac turpis egestas integer.Eget egestas purus viverra accumsan in nisl nisi scelerisque eu.Vulputate enim nulla aliquet porttitor lacus.Curabitur vitae nunc sed velit dignissim sodales ut eu.Non nisi est sit amet facilisis magna etiam tempor.Enim lobortis scelerisque fermentum dui faucibus in ornare quam.Senectus et netus et malesuada fames ac turpis egestas maecenas.</p>
+            </div>
+        </main>
 
         <footer>
             <p>thing</p>
         </footer>
-    </body>
 
+        <div class="navbar">
+            <p>aeiou</p>
+        </div>
+    </body>
 </html>
