better formatting for navbar and additional future links.

--- a/index.html
+++ b/index.html
@@ -25,11 +25,16 @@
         </main>
 
         <footer>
-            <p>thing</p>
+            <p>this is the footer</p>
         </footer>
 
         <div class="navbar">
-            <p>aeiou</p>
-        </div>
+            <ul>
+                <p>aeiou</p>
+                <p>aeiou2</p>
+                <p>aeiou3</p>
+            </ul>
+            
+        </div>  
     </body>
 </html>
