--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
         <div id="main-terminal" class="terminal animated fadeIn">
         </div>
 
-        <div class="navbar">
-            <ul>
+        <div id="navbar" class="navbar">
+            <ul id="navbar-ul">
                 <p id="home-button">Home</p>
                 <p id="page-1-button">Page 1</p>
                 <p id="page-2-button">Page 2</p>
                 <p id="page-3-button">Page 3</p>
-                <p id="page-4-button">Page 4</p>
+                <p id="page-4-button">Page 4</p>              
             </ul>    
         </div>
 
         <div id="landing" class="hidden">
             <header>
                 <div class = 'dice-header'>
-                    <img class = 'dice-image' src="./assets/2d10.png">
-                    <h1>Enim lobortis scelerisque fermentum.</h1>
+                    <img class = 'dice-image' src="./assets/d6d10.png">
+                    <h1>HTML-Me-Something</h1>
                 </div>                
                 
             </header>
@@ -31,9 +31,9 @@
             <main>
                 <div class="content">
                     <p>
-                        I gave it a cold? I gave it a virus. A computer virus. Did he just throw my cat out of the window? Yes, Yes, without the oops! Life finds a way. You really think you can fly that thing? We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore!                        
+                        This is a small site project where I play and write out the first few encounters from the <cite>Cyberpunk 2020</cite> adventure book, <cite>Home of the Brave</cite>. <cite>Cyberpunk 2020</cite> is a tabletop RPG system from the late 80s and early 90s not unlike <cite>Dungeons & Dragons</cite>. The book describes a world in which two to six players, referred to in-universe as Edgerunners, strap on their spike-laden gloves and step into the shoes of individuals inhabiting a dystopian, street cred obsessed future.  
                     </p>
-                    <div class='roll'>
+                    <div class='roll hidden'>
                         <p>Rolled Strength - &#60;1d8: 5&#62;</p>
                         <div class='comment'>
                             <p>Rolling a 5 is a failure on this check, unfortunately...</p>
@@ -49,7 +49,7 @@
 
         <div id="content-page-1" class="hidden">
             <article>
-                <h1>Page 1</h1>
+                <h2>Page 1</h2>
                 <p>
                     Do you have any idea how long it takes those cups to decompose. Do you have any idea how long it takes those cups to decompose. My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard!
                 </p>
@@ -58,7 +58,7 @@
 
         <div id="content-page-2" class="hidden">
             <article>
-                <h1>Page 2</h1>
+                <h2>Page 2</h2>
                 <p>
                     God help us, we're in the hands of engineers. You know what? It is beets. I've crashed into a beet truck. What do they got in there? King Kong? Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye! Hey, take a look at the earthlings. Goodbye!
                 </p>
@@ -67,7 +67,7 @@
 
         <div id="content-page-3" class="hidden">
             <article>
-                <h1>Page 3</h1>
+                <h2>Page 3</h2>
                 <p>
                     We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! They're using our own satellites against us. And the clock is ticking. You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
                 </p>
@@ -77,7 +77,7 @@
 
         <div id="content-page-4" class="hidden">
             <article>
-                <h1>Page 4</h1>
+                <h2>Page 4</h2>
                 <p>
                     Remind me to thank John for a lovely weekend. So you two dig up, dig up dinosaurs? You really think you can fly that thing? Remind me to thank John for a lovely weekend. Yeah, but your scientists were so preoccupied with whether or not they could, they didn't stop to think if they should.
                 </p>
