--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         This is a small site project where I play and write out the first couple of encounters from the <cite>Cyberpunk 2020</cite> adventure book, <cite>Land of the Free</cite>. <cite>Cyberpunk 2020</cite> is a tabletop <abbr title="Role-playing Game">RPG</abbr> system from the late 80's and early 90's not unlike <cite>Dungeons & Dragons</cite>. Instead of using an assortment of polyhedral dice, it uses a streamlined selection of standard d10s and d6s for everything gameplay related. The standard player's handbook describes a world in which a Referee and two to six players, referred to in-universe as Edgerunners, strap on their spike-studded gloves and step into the shoes of diverse individuals inhabiting a dystopian, street cred obsessed future.  
                     </p>
                     <p>
-                        Overall, it's mainly a short creative writing project, but I've also gone ahead and written an embedded script, adding simple <abbr title="Document Object Model">DOM</abbr>-based actions to the bottom of the page to change out the contents as needed.
+                        Overall, it's mainly a short creative writing project, but I've also gone ahead and written an embedded script, adding simple <abbr title="Document Object Model">DOM</abbr>-based navigation to the bottom of the page to change out the contents as needed.
                     </p>
                     <p>
                         
