--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div id="content-page-1" class="hidden">
             <article>
-                <h2>Page 1</h2>
+                <h2>Introduction</h2>
                 <p>
                     Do you have any idea how long it takes those cups to decompose. Do you have any idea how long it takes those cups to decompose. My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard!
                 </p>
@@ -61,7 +61,7 @@
 
         <div id="content-page-2" class="hidden">
             <article>
-                <h2>Page 2</h2>
+                <h2>Scene 1: New York Apt.</h2>
                 <p>
                     God help us, we're in the hands of engineers. You know what? It is beets. I've crashed into a beet truck. What do they got in there? King Kong? Yes, Yes, without the oops! Hey, take a look at the earthlings. Goodbye! Hey, take a look at the earthlings. Goodbye!
                 </p>
@@ -70,7 +70,7 @@
 
         <div id="content-page-3" class="hidden">
             <article>
-                <h2>Page 3</h2>
+                <h2>Scene 2: New York Streets - Convoy</h2>
                 <p>
                     We gotta burn the rain forest, dump toxic waste, pollute the air, and rip up the OZONE! 'Cause maybe if we screw up this planet enough, they won't want it anymore! They're using our own satellites against us. And the clock is ticking. You're a very talented young man, with your own clever thoughts and ideas. Do you need a manager?
                 </p>
