first draft of introduction page

--- a/index.html
+++ b/index.html
@@ -54,8 +54,23 @@
             <article>
                 <h2>Introduction</h2>
                 <p>
-                    Do you have any idea how long it takes those cups to decompose. Do you have any idea how long it takes those cups to decompose. My dad once told me, laugh and the world laughs with you, Cry, and I'll give you something to cry about you little bastard!
+                    <cite>Cyberpunk 2020's</cite> America is a much different, fractured thing. Emissions and greenhouse gases have gone unchecked, effectively rendering vast quantities of interior US lands inhospitable by 2020. For lack of a better word, anywhere outside of the big cities is a hellscape. It isn't much better inside of the cities, either, with New York City suffering a nuclear device detonation in the early 90s, leaving most of Manhattan Island in shambles. The <cite>Player's Handbook</cite> and <cite>Home of the Brave</cite> sourcebook go into much more detail than I have room for writing here, but the gist of it is that the NSA, CIA, FBI, and DEA 'team up' during a Presidential succession crisis in the mid 90's and attempt to govern from the shadows. The United States we know ceased to exist with some states, wanting more power, seceding shortly after the crisis and damaging the US irreparably. 
                 </p>
+                <p>
+                    <h3>The Adventure</h3>
+                    The big <abbr title=''>Fixer</abbr> in the Big Apple, or what's left of it in this version of 2020, is Eliot Weir (he/him). He's gathered a small cell of Edgerunners to run an extraction job - freeing an individual from an unmarked corporate laboratory in New York City and escorting them safely across the country to Night City by air, which is situated on the west coast of the United States... a tremendous urban sprawl planned right between Northern California's San Francisco and Southern California's Los Angeles. It's going to be a tough job, but he's certain that these punks will succeed.
+                </p>
+                <p>
+                    <h3>The Punks</h3>
+                    Roll (they/them) - A <abbr title=''>Solo</abbr> hired gun looking for their first big job after parting ways with their teacher. They found exactly what they had been looking for with Weir's cold-call <abbr title=''>DataTerm</abbr> message. After working under one of the west coast's most reputable Solos before they suddenly decided to retire, Roland has some huge boots to step into. Eager to find their place in this war-torn country, they suppress the strange feeling in the pit of their stomach as they cross the threshold of the apartment Weir instructed them to meet at.  
+                </p>
+                <p>
+                    Sonja (she/her) - A <abbr title=''>Nomad</abbr> finding herself lost and out of her element in the big city after her gang broke up, she sent some feelers out looking for work and Weir's quick response is the first of a few that she had planned on showing up to. Desperate to take herself off the street and back into a bucket seat, she agreed to the extraction job without hesitation.
+                </p>
+                <p>
+                    Jawn (he/him) - A Fixer skilled in the art of the deal, is informed of Weir's job through the local Big Apple grapevine and reaches out. Having another Fixer on-site would lessen the burden of sourcing everything for this job, so naturally he accepts Jawn's offer. Appreciating how important it is to show up on-time to a deal, he's the first to arrive at the scene on the south side of Manhattan Island.
+                </p>
+                
             </article>
         </div>
 
