--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     Sonja (she/her) - A <abbr title=''>Nomad</abbr> finding herself lost and out of her element in the big city after her gang broke up, she sent some feelers out looking for work and Weir's quick response is the first of a few that she had planned on showing up to. Desperate to take herself off the street and back into a bucket seat, she agreed to the extraction job without hesitation.
                 </p>
                 <p>
-                    Jawn (he/him) - A Fixer skilled in the art of the deal, is informed of Weir's job through the local Big Apple grapevine and reaches out. Having another Fixer on-site would lessen the burden of sourcing everything for this job, so naturally he accepts Jawn's offer. Appreciating how important it is to show up on-time to a deal, he's the first to arrive at the scene on the south side of Manhattan Island.
+                    Jawn (he/him) - A Fixer skilled in the art of the deal, he's informed of Weir's job through the local Big Apple grapevine and reaches out. Having another Fixer on-site would lessen the burden of sourcing everything for this job, so naturally he accepts Jawn's offer. Appreciating how important it is to show up on-time to a deal, he's the first to arrive at the scene on the south side of Manhattan Island.
                 </p>
                 
             </article>
