added html entities before I finish scene 1 and 2

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </main>
     
             <footer>
-                <p>e-mail me!</p>
+                <p>&lt;e-mail me!&gt;</p>
             </footer>
         </div>
 
